src/test/ui/issues/issue-3096-1.rs
fn main() {
    match () { } //~ ERROR non-exhaustive
}
